# cl-2024-2-lab

./: README.md  pyproject.toml
notebooks/: 0_intro_config.ipynb  0_intro_config.md  1_language_levels_I.ipynb  1_language_levels_I.py  2_language_levels_II.ipynb  2_language_levels_II.py  3_stats_properties_language.py  3_stats_properties_language_WIP.ipynb  4_tokenization.ipynb  4_tokenization.py  5_palabras_a_vectores.ipynb  5_palabras_a_vectores.py  6_modelos_del_lenguaje.ipynb  6_modelos_del_lenguaje.py  7_Neural_machine_translation.ipynb  7_Neural_machine_translation.py  8_Modelos_lenguaje_neuronales.ipynb  8_Modelos_lenguaje_neuronales.py  9_transformers_con_huggin_face.ipynb  9_transformers_con_huggin_face.py  translator.py
practices/Ahexo/: README.md
practices/Ahexo/practica1/: README.md  practica01.py
practices/Ahexo/practica2/: README.md  practica2.py  requirements.txt
practices/Ahexo/practica3/: README.md  practica3.py  requirements.txt
practices/Ahexo/practica4/: README.md  practica4.py  requirements.txt
practices/Ahexo/practica5/: Practica5.ipynb  README.md  practica5.py  requirements.txt
practices/CervantesAlexis/: README.md  practica3.py
practices/MaiteDT/: README.md
practices/Ramon-OC/: README.md
practices/Super-Gabriel/: 1_language_levels_I.py  README.md  practica022.py  practica03.py  practica04.py  practica05.py  practica06.py
practices/davo1956/: README.md
practices/mariorosales8/: README.md
practices/pianissimo-pp/: README.md
practices/soyliz30/: README.md  Readme.md  readme.md
practices/umoqnier/: README.md
(+100 files in other folders)
