[tool.poetry]
name = "cl-2024-2-lab"
version = "0.1.0"
description = ""
authors = ["Diego Alberto Barriga Martinez <umoqnier@riseup.net>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,!=3.9.7,<3.12"
notebook = "^7.0.7"
numpy = "^1.26.3"
pandas = "^2.2.0"
nltk = "^3.8.1"
rise = "^5.7.1"
jupyterlab-rise = "^0.42.0"
jupytext = "^1.16.1"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
spacy = "^3.7.4"
sklearn-crfsuite = "^0.3.6"
elotl = "^0.0.1.16"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
subword-nmt = "^0.3.8"
wikiextractor = "^3.0.6"
gensim = "^4.3.2"
streamlit = "^1.33.0"
opennmt-py = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
